--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="style-portfolio.css" rel="stylesheet">
         <title>Portfólio - Francielle S. R. Oliveira</title>
     </head>
 
@@ -16,5 +17,6 @@
 
         <footer>
         </footer>
+
     </body>
 </html>
