--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
         <link href="style-portfolio.css" rel="stylesheet">
+
+        <meta name="author" content="Francielle S. R. Oliveira">
+        <meta name="description" content="Este é o portflio de Francielle, um de seus primeiros projetos. Foco!">
+
         <title>Portfólio - Francielle S. R. Oliveira</title>
+        <link rel="icon" href="">
     </head>
 
     <body>
