--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
         <link rel="icon" href="">
     </head>
 
-    <body>
+    <body class="gradient">
+        <h1 class="text">Francielle Developer</h1>
+
         <header>
-            <div id="container" class="m-40">
-                <h1>Título</h1>
-            </div>
         </header>
 
         <main> 
