--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
         <meta name="description" content="Este é o portflio de Francielle, um de seus primeiros projetos. Foco!">
 
         <title>Portfólio - Francielle S. R. Oliveira</title>
-        <link rel="icon" href="">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/android-chrome-512x512.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
     </head>
 
     <body class="gradient">
@@ -29,7 +34,7 @@
         </footer>
 
         <script>
-            
+
         </script>
 
     </body>
